p3/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
  namespace: dev
  labels:
    app.kubernetes.io/name: playground
    app.kubernetes.io/part-of: p3

spec:
  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: playground
  
  template:
    metadata:
      labels:
        app.kubernetes.io/name: playground
        app.kubernetes.io/part-of: p3

    spec:
      containers:
        - name: playground
          image: wil42/playground:v1  # To deploy v2, change only v1 to v2
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
