p3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground
  namespace: dev
  labels:
    app.kubernetes.io/name: playground
    app.kubernetes.io/part-of: p3

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: playground

  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: http
