p3/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground
  namespace: dev
  labels:
    app.kubernetes.io/name: playground
    app.kubernetes.io/part-of: p3
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: playground
                port:
                  number: 8888
